 - Bugfix: The "showing" property is now checked for correctness when the DockController of a Dockable changes.
 - Bugfix: Resizing a ScreenDockWindow to a size smaller than its acceptable minimum will no longer move the window. 
 - API: The ScreenDropSizeStrategy allows to influence the size a dropped Dockable on a ScreenDockStation gets 
 - Bugfix: StackDockStation could throw exception during drag and drop when having only one child
 - API: DefaultExtendedModeEnablement offers now an extension
 ! API: ExtendedModeEnablement now also decides which hints (buttons) are visible for the user
 ! API: StackDockComponent has now a custom listener instead of the generic ChangeListener
 ! API: ScreenDockStation can now move a window when grabbed at its only tab
 - Bugfix: Icons of size 0/0 should no longer produce an exception in DockUtilities.disabledIcon
 - Bugfix: GlassedPane now emulates "fall through" behavior for MouseEvents
 - API: Added three new extensions, Toolbar, Toolbar-Common and Toolbar-Tutorial. This includes new DockStations, new Tutorials, and a lot new configurations.
 - Bugfix: vertical OrientedLabel did not paint text at the correct location, making the text invisible

[v1.1.1p8a]
 - API: new tutorial for WizardSplitDockStation
 - Bugfix: Eclipse-tabs without actions did not show the entire text even if there was enough space
  
[v1.1.1p8b]
 - Bugfix: Icon of ButtonCombinedMenu did not show up when the mouse hovered over the button.
 - Bugfix: When changing the DockTheme, the "hold" (also known as "sticky") action of the FlapDockStation did disappear.
 ! API: removed the deprecated ComponentDockable
 - API: added MenuLineLayoutStrategy, allows clients to more easily fine tune the behavior of MenuLineLayout
  
[Todo]
- Drop StackDockStation over Dockable and merge them